# proxsuite

./: CMakeLists.txt
OOOOOLDqdldl/: CMakeLists.txt
OOOOOLDqdldl/qdldl_sources/: CMakeLists.txt
bindings/python/: CMakeLists.txt
bindings/python/src/: algorithms.hpp  expose-all.cpp  expose-ldlt.hpp  expose-primal_dual_splitting.hpp  expose-qpobject.hpp  expose-results.hpp  expose-settings.hpp  expose-socpobject.hpp
include/proxsuite/linalg/dense/: ldlt.hpp
include/proxsuite/linalg/qdldl/: SuiteSparse_config.h  constants.h  cs.h  glob_opts.h  kkt.h  lin_alg.h  lin_sys.h  qdldl.h  qdldl_interface.h  types.h
include/proxsuite/linalg/sparse/: core.hpp
include/proxsuite/proxqp/: results.hpp  settings.hpp
include/proxsuite/proxqp/dense/: compute_ECJ.hpp  fwd.hpp  helpers.hpp  linesearch.hpp  prox_socp_dense.hpp  solve_primal_dual_splitting.hpp  solve_primal_dual_splitting_full_sides_reduced.hpp  solve_primal_dual_splitting_reduced.hpp  solver.hpp  utils.hpp  workspace.hpp  workspace_primal_dual_splitting.hpp  workspace_primal_dual_splitting_full_sides_reduced.hpp  workspace_primal_dual_splitting_reduced.hpp  workspace_prox_socp.hpp  wrapper.hpp
include/proxsuite/proxqp/dense/preconditioner/: bunch.hpp  ruiz.hpp  ruiz_socp.hpp
include/proxsuite/proxqp/sparse/: fwd.hpp  prox_socp_sparse.hpp  utils.hpp  workspace_prox_socp.hpp  wrapper.hpp
include/proxsuite/proxqp/sparse/preconditioner/: ruiz.hpp  ruiz_socp.hpp
include/proxsuite/proxqp/utils/: random_qp_problems.hpp
include/proxsuite/serialization/: results.hpp  settings.hpp
src/: CMakeLists.txt
src/qdldl/: CMakeLists.txt  SuiteSparse_config.c  amd_1.c  amd_2.c  amd_aat.c  amd_control.c  amd_defaults.c  amd_info.c  amd_order.c  amd_post_tree.c  amd_postorder.c  amd_preprocess.c  amd_valid.c  cs.c  kkt.c  lin_alg.c  lin_sys.c  qdldl.c  qdldl_interface.c
test/: CMakeLists.txt
test/src/: data_osqp.h  dense_qp_wrapper.cpp  dense_ruiz_equilibration.cpp  osqp_test.cpp  sparse_qp.cpp  sparse_qp_solve.cpp  sparse_qp_wrapper.cpp  sparse_ruiz_equilibration.cpp
